2012-06-01  Ryosuke Niwa  <rniwa@webkit.org>

        Another Chromium test expectation update per the bug 88124.

        * platform/chromium/test_expectations.txt:

2012-06-01  Ryosuke Niwa  <rniwa@webkit.org>

        Chromium test expectation update.

        * platform/chromium/test_expectations.txt:

2012-06-01  Joe Thomas  <joethomas@motorola.com>

        getComputedStyle for background shorthand property does not return background-origin and background-clip.
        https://bugs.webkit.org/show_bug.cgi?id=86155

        Reviewed by Tony Chang.

        Added background-origin and background-clip CSS Property values to the background shorthand CSSValueList.

        * fast/backgrounds/background-shorthand-with-backgroundSize-style-expected.txt:
        * fast/backgrounds/background-shorthand-with-backgroundSize-style.html:
        * fast/css/getComputedStyle/getComputedStyle-background-shorthand-expected.txt:
        * fast/css/getComputedStyle/getComputedStyle-background-shorthand.html:

2012-06-01  Hugo Parente Lima  <hugo.lima@openbossa.org>

        Improve handling of legacy viewport meta tags
        https://bugs.webkit.org/show_bug.cgi?id=55874

        Reviewed by Adam Barth.

        Add tests and expected results.

        * fast/viewport/viewport-legacy-handheldfriendly-expected.txt: Added.
        * fast/viewport/viewport-legacy-handheldfriendly.html: Added.
        * fast/viewport/viewport-legacy-mobileoptimized-2-expected.txt: Added.
        * fast/viewport/viewport-legacy-mobileoptimized-2.html: Added.
        * fast/viewport/viewport-legacy-mobileoptimized-3-expected.txt: Added.
        * fast/viewport/viewport-legacy-mobileoptimized-3.html: Added.
        * fast/viewport/viewport-legacy-mobileoptimized-expected.txt: Added.
        * fast/viewport/viewport-legacy-mobileoptimized.html: Added.
        * fast/viewport/viewport-legacy-ordering-1-expected.txt: Added.
        * fast/viewport/viewport-legacy-ordering-1.html: Added.